<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ssamsara98.dicodingevents.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventDetailActivity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.ssamsara98.dicodingevents.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.ssamsara98.dicodingevents.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <activity
        android:id="@+id/event_detail_activity"
        android:name="com.ssamsara98.dicodingevents.ui.detail.EventDetailActivity"
        android:label="activity_event_detail"
        tools:layout="@layout/activity_event_detail" >
        <argument
            android:name="event_item"
            app:argType="com.ssamsara98.dicodingevents.response.EventItem"
            app:nullable="true"
            android:defaultValue="@null" />
    </activity>
</navigation>